--- a/ui5.yaml
+++ b/ui5.yaml
@@ -2,3 +2,12 @@ specVersion: '1.0'
 metadata:
   name: wasteStatsApp
 type: application
+
+server:
+  customMiddleware:
+  - name: ui5-middleware-livereload
+    afterMiddleware: compression
+    configuration:
+      debug: true
+      port: 35729
+      path: webapp
