--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -30,13 +30,13 @@
 
 	"sap.ui5": {
 		"rootView": {
-			"viewName": "com.fidschenberger.wasteStatsApp.view.MainView",
+			"viewName": "com.fidschenberger.wasteStatsApp.view.App",
 			"type": "XML",
 			"async": true,
 			"id": "app"
 		},
 		"dependencies": {
-			"minUI5Version": "1.60.0",
+			"minUI5Version": "1.74.0",
 			"libs": {
 				"sap.ui.core": {},
 				"sap.m": {},
@@ -69,16 +69,19 @@
 				"controlAggregation": "pages",
 				"async": true
 			},
-			"routes": [{
-				"name": "RouteMainView",
-				"pattern": "RouteMainView",
-				"target": ["TargetMainView"]
-			}],
+			"routes": [
+				{
+					"pattern": "",
+					"name": "home",
+					"target": ["home"]
+				}
+			],
 			"targets": {
-				"TargetMainView": {
-					"viewType": "XML",
+				"home": {
+					"viewName": "Home",
+					"viewId": "home",
 					"viewLevel": 1,
-					"viewName": "MainView"
+					"title": "{i18n>title}"
 				}
 			}
 		}
