--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -40,7 +40,8 @@
 			"libs": {
 				"sap.ui.core": {},
 				"sap.m": {},
-				"sap.ui.layout": {}
+				"sap.ui.layout": {},
+				"sap.ui.table": {}
 			}
 		},
 		"contentDensities": {
