--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
                 "@openui5/sap.m": "^1.74.1",
                 "@openui5/sap.ui.core": "^1.74.1",
                 "@openui5/sap.ui.layout": "^1.74.1",
+                "chart.js": "^2.9.3",
                 "shx": "^0.3.2",
                 "ui5-middleware-livereload": "^0.1.6"
         },
