--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
                 "build:ui": "ui5 build --clean-dest --dest approuter/webapp "
         },
         "dependencies": {
+                "@auth0/auth0-spa-js": "^1.6.4",
                 "@openui5/sap.m": "^1.74.1",
                 "@openui5/sap.ui.core": "^1.74.1",
                 "@openui5/sap.ui.layout": "^1.74.1",
