--- a/ui5.yaml
+++ b/ui5.yaml
@@ -1,13 +1,26 @@
-specVersion: '1.0'
+specVersion: "2.0"
+type: application
 metadata:
   name: wasteStatsApp
-type: application
+
+framework:
+  name: OpenUI5
+  version: 1.76.0
+  libraries:
+    - name: sap.ui.core
+    - name: sap.f
+    - name: sap.m
+    - name: sap.ui.layout
+    - name: themelib_sap_fiori_3
+resources:
+  configuration:
+    propertiesFileSourceEncoding: UTF-8
 
 server:
   customMiddleware:
-  - name: ui5-middleware-livereload
-    afterMiddleware: compression
-    configuration:
-      debug: true
-      port: 35729
-      path: webapp
+    - name: ui5-middleware-livereload
+      afterMiddleware: compression
+      configuration:
+        debug: true
+        port: 35729
+        path: webapp
