--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
         "name": "waste_stats_app",
         "version": "0.0.1",
-        "description": "Best-practice starting point for building a freestyle app",
+        "description": "Helps you to keep track of your household garbage",
         "engines": {
                 "node": "12.x.x"
         },
         "scripts": {
                 "start": "ui5 serve -o index.html",
                 "serve": "ui5 serve",
+                "serve-dist": "ws --compress -d dist",
                 "test": "npm run lint && npm run karma",
                 "karma-ci": "karma start karma-ci.conf.js",
                 "karma": "rimraf coverage && npm run karma-ci",
@@ -18,18 +19,20 @@
                 "build:ui": "ui5 build --clean-dest --dest approuter/webapp "
         },
         "dependencies": {
-                "@auth0/auth0-spa-js": "^1.6.4",
+                "@auth0/auth0-spa-js": "^1.7.0",
                 "chart.js": "^2.9.3",
                 "localforage": "^1.7.3",
                 "shx": "^0.3.2",
-                "ui5-middleware-livereload": "^0.1.6"
+                "ui5-middleware-livereload": "^0.1.10"
         },
         "devDependencies": {
-                "@ui5/cli": "^2.0.2",
-                "eslint": "^6.7.2",
-                "karma": "^4.4.1",
+                "@ui5/cli": "^2.0.3",
+                "eslint": "^6.8.0",
+                "karma": "^5.0.2",
                 "karma-chrome-launcher": "^3.1.0",
-                "karma-coverage": "^2.0.1",
-                "karma-ui5": "^1.1.0"
+                "karma-coverage": "^2.0.2",
+                "karma-ui5": "^2.1.0",
+                "local-web-server": "^3.0.7",
+                "rimraf": "^3.0.2"
         }
 }
