switch between table and bar chart is working

--- a/webapp/model/config.json
+++ b/webapp/model/config.json
@@ -1,5 +1,10 @@
 {
     "config": {
-        "enable-auth0": "false"
-    }
+        "enable-auth0": false
+    },
+    "visibility": {
+        "chart" : true,
+        "table" : false
+    },
+    "selectedChartType": "bar"
 }
