--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-        "name": "waste_stats_app",
+        "name": "trasta",
         "version": "0.0.1",
-        "description": "Helps you to keep track of your household garbage",
+        "description": "Helps you to keep track of your household trash",
         "engines": {
                 "node": "12.x.x"
         },
@@ -18,12 +18,14 @@
                 "build-self-contained": "ui5 build self-contained -a --clean-dest",
                 "build:ui": "ui5 build --clean-dest --dest approuter/webapp "
         },
+        "ui5": {
+                "dependencies": [
+                        "ui5-middleware-livereload"
+                ]
+        },
         "dependencies": {
-                "@auth0/auth0-spa-js": "^1.7.0",
                 "chart.js": "^2.9.3",
-                "localforage": "^1.7.3",
-                "shx": "^0.3.2",
-                "ui5-middleware-livereload": "^0.1.10"
+                "localforage": "^1.7.3"
         },
         "devDependencies": {
                 "@ui5/cli": "^2.0.3",
@@ -33,6 +35,8 @@
                 "karma-coverage": "^2.0.2",
                 "karma-ui5": "^2.1.0",
                 "local-web-server": "^3.0.7",
-                "rimraf": "^3.0.2"
+                "rimraf": "^3.0.2",
+                "shx": "^0.3.2",
+                "ui5-middleware-livereload": "^0.1.10"
         }
 }
