--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -14,7 +14,7 @@
 		"technology": "UI5",
 		"icons": {
 			"icon": "",
-			"favIcon": "",
+			"favIcon": "resources/img/icon-300.png",
 			"phone": "",
 			"phone@2": "",
 			"tablet": "",
@@ -55,18 +55,22 @@
 			},
 			"waste_types": {
 				"type": "sap.ui.model.json.JSONModel",
-				"uri": "model/wasteTypes.json"
+				"uri": "model/wasteTypes.json",
+				"preload": "true"
 			},
 			"waste_items": {
 				"type": "sap.ui.model.json.JSONModel",
-				"uri": "model/wasteItemsEmpty.json"
+				"uri": "model/wasteItemsEmpty.json",
+				"preload": "true"
 			},
 			"waste_statistics": {
-				"type": "sap.ui.model.json.JSONModel"
+				"type": "sap.ui.model.json.JSONModel",
+				"preload": "true"
 			},
 			"configuration": {
 				"type": "sap.ui.model.json.JSONModel",
-				"uri": "model/config.json"
+				"uri": "model/config.json",
+				"preload": "true"
 			}
 		},
 		"resources": {
