Support display by month + refactoring

--- a/webapp/model/config.json
+++ b/webapp/model/config.json
@@ -6,5 +6,6 @@
         "chart" : true,
         "table" : false
     },
-    "selectedChartType": "bar"
+    "selectedChartType": "bar",
+    "selectedDisplayMode": "TYPE"
 }
